--- a/index.html
+++ b/index.html
@@ -1,64 +1,82 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header> 
-        <nav>
-        <a href="/">
-            <img src="./images/logo.png/Web Studio.png" alt="">
-        </a>
-         
-        <ul>
-            <li><a href="./images/logo.png/Студия.png">Студия</a></li>
-            <li><a href="./images/logo.png/Портфолио.png">Портфолио</a></li>
-            <li><a href="./images/logo.png/Контакты.png">Контакты</a></li>
-        </ul>
-        </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<a href="/">
+					<img src="./images/logo.png/Web Studio.png" alt="" />
+				</a>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+				<ul>
+					<li><a href="./images/logo.png/Студия.png">Студия</a></li>
+					<li><a href="./images/logo.png/Портфолио.png">Портфолио</a></li>
+					<li><a href="./images/logo.png/Контакты.png">Контакты</a></li>
+				</ul>
+			</nav>
 
-    <div>
-        <section>
-            <h1>Эффективные решения<br> для вашего бизнеса</h1>
-            <a href="./images/logo.png/Заказать услугу.png">Заказать услугу</a>
-            <img src="./images/Header img.png" alt="">
-        </section>
-    </div>
+			<ul>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+			</ul>
+		</header>
 
-    <section>
-        <ul>
-            <li>
-                <img src="./images/logo.png/Vector.png" alt="">
-                <h5>ВНИМАНИЕ К ДЕТАЛЯМ</h5>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            <li>
+		<div>
+			<section>
+				<h1>
+					Эффективные решения
+					<br />
+					для вашего бизнеса
+				</h1>
+				<button>Заказать услугу</button>
+			</section>
+		</div>
 
-            <li>
-                <img src="./images/logo.png/Vector (1).png" alt="">
-                <h5>ПУНКТУАЛЬНОСТЬ</h5>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li> 
-            
-            <li>
-                <img src="./images/logo.png/Vector (2).png" alt="">
-                <h5>ПЛАНИРОВАНИЕ</h5>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
+		<section>
+			<ul>
+				<li>
+					<img src="./images/logo.png/Vector.png" alt="" />
+					<h5>ВНИМАНИЕ К ДЕТАЛЯМ</h5>
+					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+				</li>
 
-            <li>
-                <img src="./images/logo.png/Vector (3).png" alt="">
-                <h5>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h5>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
-</body>
+				<li></li>
+
+				<li>
+					<img src="./images/logo.png/Vector (1).png" alt="" />
+					<h5>ПУНКТУАЛЬНОСТЬ</h5>
+					<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+				</li>
+
+				<li>
+					<img src="./images/logo.png/Vector (2).png" alt="" />
+					<h5>ПЛАНИРОВАНИЕ</h5>
+					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+				</li>
+
+				<li>
+					<img src="./images/logo.png/Vector (3).png" alt="" />
+					<h5>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h5>
+					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+				</li>
+			</ul>
+		</section>
+
+		<section>
+			<h2>Чем мы занимаемся</h2>
+			<ul>
+				<li><img src="./images/"</li>
+				<li><img src="./images/"</li>
+				<li><img src="./images/"</li>
+			</ul>
+		</section>
+
+		<section>
+			<h2>Наша команда</h2>
+		</section>
+	</body>
 </html>
