--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="./images/"</li>
+				<li><img src="/images/"</li>
 				<li><img src="./images/"</li>
 				<li><img src="./images/"</li>
 			</ul>
