--- a/index.html
+++ b/index.html
@@ -69,14 +69,19 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="/images/"</li>
-				<li><img src="./images/"</li>
-				<li><img src="./images/"</li>
+				<li><img src="/images/box 1.png"</li>
+				<li><img src="./images/box 2.png"</li>
+				<li><img src="./images/box 3.png"</li>
 			</ul>
 		</section>
 
 		<section>
 			<h2>Наша команда</h2>
+			<ul>
+				<li>
+					<img src="./images/"
+				</li>
+			</ul>
 		</section>
 	</body>
 </html>
