--- a/index.html
+++ b/index.html
@@ -79,31 +79,49 @@
 			<h2>Наша команда</h2>
 			<ul>
 				<li>
-                    <img src="./images/img1.png"
-                    <p>Николай Кучеренко</p>
-                    <p>Product designer</p>
-                        <ul>
-                           <li><img src="./images/instagram 2.png"</li>
-                           <li><img src="./images/twitter.png"</li>
-                           <li><img src="./images/facebook.png"</li>
-                           <li><img src="./images/in.png"</li> 
-                        </ul>
-                </li>
-                <li>
-                    <img src="./images/img2.png"
-                    <p>Ольга Иванова</p>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/img3.png"
-                    <p>Андрей Шевченко</p>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/img4.png"
-                    <p>Иван Николаев</p>
-                    <p>UI Designer</p>
-                </li>
+					<img src="./images/img1.png" <br />
+					<p>Николай Кучеренко</p>
+					<p>Product designer</p>
+					<ul>
+						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/twitter.png"</li>
+						<li><img src="./images/facebook.png"</li>
+						<li><img src="./images/in.png"</li>
+					</ul>
+				</li>
+				<li>
+					<img src="./images/img2.png" <br />
+					<p>Ольга Иванова</p>
+					<p>Frontend Developer</p>
+					<ul>
+						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/twitter.png"</li>
+						<li><img src="./images/facebook.png"</li>
+						<li><img src="./images/in.png"</li>
+					</ul>
+				</li>
+				<li>
+					<img src="./images/img3.png" <br />
+					<p>Андрей Шевченко</p>
+					<p>Marketing</p>
+					<ul>
+						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/twitter.png"</li>
+						<li><img src="./images/facebook.png"</li>
+						<li><img src="./images/in.png"</li>
+					</ul>
+				</li>
+				<li>
+					<img src="./images/img4.png" <br />
+					<p>Иван Николаев</p>
+					<p>UI Designer</p>
+					<ul>
+						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/twitter.png"</li>
+						<li><img src="./images/facebook.png"</li>
+						<li><img src="./images/in.png"</li>
+					</ul>
+				</li>
 			</ul>
 		</section>
 	</body>
