--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Document</title>
 	</head>
 	<body>
 		<header>
 			<nav>
 				<a href="/">
-					<img src="./images/logo.png/Web Studio.png" alt="" />
+					<img src="./images/logo.png/logo.png" alt="" />
 				</a>
 
 				<ul>
-					<li><a href="./images/logo.png/Студия.png">Студия</a></li>
-					<li><a href="./images/logo.png/Портфолио.png">Портфолио</a></li>
-					<li><a href="./images/logo.png/Контакты.png">Контакты</a></li>
+					<li><a href="./images/logo.png/studio.png">Студия</a></li>
+					<li><a href="./images/logo.png/portfolio.png">Портфолио</a></li>
+					<li><a href="./images/logo.png/contacts.png">Контакты</a></li>
 				</ul>
 			</nav>
 
@@ -39,7 +40,7 @@
 		<section>
 			<ul>
 				<li>
-					<img src="./images/logo.png/Vector.png" alt="" />
+					<img src="./images/logo.png/vector.png" alt="" />
 					<h5>ВНИМАНИЕ К ДЕТАЛЯМ</h5>
 					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 				</li>
@@ -47,19 +48,19 @@
 				<li></li>
 
 				<li>
-					<img src="./images/logo.png/Vector (1).png" alt="" />
+					<img src="./images/logo.png/vector1.png" alt="" />
 					<h5>ПУНКТУАЛЬНОСТЬ</h5>
 					<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 				</li>
 
 				<li>
-					<img src="./images/logo.png/Vector (2).png" alt="" />
+					<img src="./images/logo.png/vector2.png" alt="" />
 					<h5>ПЛАНИРОВАНИЕ</h5>
 					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 				</li>
 
 				<li>
-					<img src="./images/logo.png/Vector (3).png" alt="" />
+					<img src="./images/logo.png/vector3.png" alt="" />
 					<h5>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h5>
 					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 				</li>
@@ -80,7 +81,7 @@
 			<ul>
 				<li>
 					<img src="./images/img1.png" <br />
-					<p>Николай Кучеренко</p>
+					<h3>Николай Кучеренко</h3>
 					<p>Product designer</p>
 					<ul>
 						<li><img src="./images/instagram 2.png"</li>
@@ -91,7 +92,7 @@
 				</li>
 				<li>
 					<img src="./images/img2.png" <br />
-					<p>Ольга Иванова</p>
+					<h3>Ольга Иванова</h3>
 					<p>Frontend Developer</p>
 					<ul>
 						<li><img src="./images/instagram 2.png"</li>
@@ -102,7 +103,7 @@
 				</li>
 				<li>
 					<img src="./images/img3.png" <br />
-					<p>Андрей Шевченко</p>
+					<h3>Андрей Шевченко</h3>
 					<p>Marketing</p>
 					<ul>
 						<li><img src="./images/instagram 2.png"</li>
@@ -113,7 +114,7 @@
 				</li>
 				<li>
 					<img src="./images/img4.png" <br />
-					<p>Иван Николаев</p>
+					<h3>Иван Николаев</h3>
 					<p>UI Designer</p>
 					<ul>
 						<li><img src="./images/instagram 2.png"</li>
