--- a/index.html
+++ b/index.html
@@ -125,5 +125,12 @@
 				</li>
 			</ul>
 		</section>
+
+		<section>
+			<h2>Постоянные клиенты</h2>
+			<ul>
+				<li><img src="./"</li>
+			</ul>
+		</section>
 	</body>
 </html>
