--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="/images/box 1.png"</li>
-				<li><img src="./images/box 2.png"</li>
-				<li><img src="./images/box 3.png"</li>
+				<li><img src="/images/box1.png"</li>
+				<li><img src="./images/box2.png"</li>
+				<li><img src="./images/box3.png"</li>
 			</ul>
 		</section>
 
@@ -84,7 +84,7 @@
 					<h3>Николай Кучеренко</h3>
 					<p>Product designer</p>
 					<ul>
-						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/instagram.png"</li>
 						<li><img src="./images/twitter.png"</li>
 						<li><img src="./images/facebook.png"</li>
 						<li><img src="./images/in.png"</li>
@@ -95,7 +95,7 @@
 					<h3>Ольга Иванова</h3>
 					<p>Frontend Developer</p>
 					<ul>
-						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/instagram.png"</li>
 						<li><img src="./images/twitter.png"</li>
 						<li><img src="./images/facebook.png"</li>
 						<li><img src="./images/in.png"</li>
@@ -106,7 +106,7 @@
 					<h3>Андрей Шевченко</h3>
 					<p>Marketing</p>
 					<ul>
-						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/instagram.png"</li>
 						<li><img src="./images/twitter.png"</li>
 						<li><img src="./images/facebook.png"</li>
 						<li><img src="./images/in.png"</li>
@@ -117,7 +117,7 @@
 					<h3>Иван Николаев</h3>
 					<p>UI Designer</p>
 					<ul>
-						<li><img src="./images/instagram 2.png"</li>
+						<li><img src="./images/instagram.png"</li>
 						<li><img src="./images/twitter.png"</li>
 						<li><img src="./images/facebook.png"</li>
 						<li><img src="./images/in.png"</li>
@@ -129,8 +129,29 @@
 		<section>
 			<h2>Постоянные клиенты</h2>
 			<ul>
-				<li><img src="./"</li>
+				<li><img src="./images/Client1.svg"</li>
+				<li><img src="./images/Client2.svg"</li>
+				<li><img src="./images/Client3.svg"</li>
+				<li><img src="./images/Client4.svg"</li>
+				<li><img src="./images/Client5.svg"</li>
+				<li><img src="./images/Client6.svg"</li>
 			</ul>
 		</section>
+
+		<footer>
+			<a href="/">
+				<img src="./images/logo.png/logo.png" alt="" />
+			</a>
+			<p>г.Киев, пр-т Леси Украинки, 26</p>
+			<p>info@example.com</p>
+			<p>+38 099 111 11 11</p>
+			<h5>Присоединяйтесь</h5>
+			<ul>
+				<li><img src="./images/instagram.png"</li>
+				<li><img src="./images/twitter.png"</li>
+				<li><img src="./images/facebook.png"</li>
+				<li><img src="./images/in.png"</li>
+			</ul>
+		</footer>
 	</body>
 </html>
