--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="/images/box1.png"</li>
-				<li><img src="./images/box2.png"</li>
-				<li><img src="./images/box3.png"</li>
+				<li><img src="/images/box1.png" alt="" /></li>
+				<li><img src="./images/box2.png" alt="" /></li>
+				<li><img src="./images/box3.png" alt="" /></li>
 			</ul>
 		</section>
 
@@ -80,7 +80,7 @@
 			<h2>Наша команда</h2>
 			<ul>
 				<li>
-					<img src="./images/img1.png" <br />
+					<img src="./images/img1.png"
 					<h3>Николай Кучеренко</h3>
 					<p>Product designer</p>
 					<ul>
@@ -91,7 +91,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img2.png" <br />
+					<img src="./images/img2.png"
 					<h3>Ольга Иванова</h3>
 					<p>Frontend Developer</p>
 					<ul>
@@ -102,7 +102,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img3.png" <br />
+					<img src="./images/img3.png"
 					<h3>Андрей Шевченко</h3>
 					<p>Marketing</p>
 					<ul>
@@ -113,7 +113,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img4.png" <br />
+					<img src="./images/img4.png"
 					<h3>Иван Николаев</h3>
 					<p>UI Designer</p>
 					<ul>
@@ -147,10 +147,10 @@
 			<p>+38 099 111 11 11</p>
 			<h5>Присоединяйтесь</h5>
 			<ul>
-				<li><img src="./images/instagram.png"</li>
-				<li><img src="./images/twitter.png"</li>
-				<li><img src="./images/facebook.png"</li>
-				<li><img src="./images/in.png"</li>
+				<li><img src="./images/instagram.png" alt="" /></li>
+				<li><img src="./images/twitter.png" alt="" /></li>
+				<li><img src="./images/facebook.png" alt="" /></li>
+				<li><img src="./images/in.png" alt="" /></li>
 			</ul>
 		</footer>
 	</body>
