--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Document</title>
+		<title>web-studio</title>
 	</head>
 	<body>
 		<header>
 			<nav>
 				<a href="/">
-					<img src="./images/logo.png/logo.png" alt="" />
+					<img src="./images/logo/logo.svg" alt="logo-of-company" />
 				</a>
 
 				<ul>
-					<li><a href="./images/logo.png/studio.png">Студия</a></li>
-					<li><a href="./images/logo.png/portfolio.png">Портфолио</a></li>
-					<li><a href="./images/logo.png/contacts.png">Контакты</a></li>
+					<li><a href="./images/logo/studio.svg">Студия</a></li>
+					<li><a href="./images/logo/portfolio.svg">Портфолио</a></li>
+					<li><a href="./images/logo/contacts.svg">Контакты</a></li>
 				</ul>
 			</nav>
 
 			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@example.com">info@example.com</a></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
@@ -40,7 +40,7 @@
 		<section>
 			<ul>
 				<li>
-					<img src="./images/logo.png/vector.png" alt="" />
+					<img src="./images/logo/vector.svg" alt="antenna" />
 					<h5>ВНИМАНИЕ К ДЕТАЛЯМ</h5>
 					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 				</li>
@@ -48,19 +48,19 @@
 				<li></li>
 
 				<li>
-					<img src="./images/logo.png/vector1.png" alt="" />
+					<img src="./images/logo/vector1.svg" alt="clock" />
 					<h5>ПУНКТУАЛЬНОСТЬ</h5>
 					<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 				</li>
 
 				<li>
-					<img src="./images/logo.png/vector2.png" alt="" />
+					<img src="./images/logo/vector2.svg" alt="desktop" />
 					<h5>ПЛАНИРОВАНИЕ</h5>
 					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 				</li>
 
 				<li>
-					<img src="./images/logo.png/vector3.png" alt="" />
+					<img src="./images/logo/vector3.svg" alt="cosmo" />
 					<h5>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h5>
 					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 				</li>
@@ -70,9 +70,9 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="/images/box1.png" alt="" /></li>
-				<li><img src="./images/box2.png" alt="" /></li>
-				<li><img src="./images/box3.png" alt="" /></li>
+				<li><img src="/images/box1.svg" alt="Десктопные приложения" /></li>
+				<li><img src="./images/box2.svg" alt="Мобильные приложения" /></li>
+				<li><img src="./images/box3.svg" alt="Дизайнерские решения" /></li>
 			</ul>
 		</section>
 
@@ -80,47 +80,47 @@
 			<h2>Наша команда</h2>
 			<ul>
 				<li>
-					<img src="./images/img1.png"
+					<img src="./images/img1.jpg" alt="nik" />
 					<h3>Николай Кучеренко</h3>
 					<p>Product designer</p>
 					<ul>
-						<li><img src="./images/instagram.png"</li>
-						<li><img src="./images/twitter.png"</li>
-						<li><img src="./images/facebook.png"</li>
-						<li><img src="./images/in.png"</li>
+						<li><img src="./images/instagram.svg" alt="logo-instagram" /></li>
+						<li><img src="./images/twitter.svg" alt="logo-twitte" /></li>
+						<li><img src="./images/facebook.svg" alt="logo-facebook" /></li>
+						<li><img src="./images/in.svg" alt="logo-in" /></li>
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img2.png"
+					<img src="./images/img2.jpg" alt="olga" />
 					<h3>Ольга Иванова</h3>
 					<p>Frontend Developer</p>
 					<ul>
-						<li><img src="./images/instagram.png"</li>
-						<li><img src="./images/twitter.png"</li>
-						<li><img src="./images/facebook.png"</li>
-						<li><img src="./images/in.png"</li>
+						<li><img src="./images/instagram.svg" alt="logo-instagram" /></li>
+						<li><img src="./images/twitter.svg" alt="logo-twitter" /></li>
+						<li><img src="./images/facebook.svg" alt="logo-facebook" /></li>
+						<li><img src="./images/in.svg" alt="logo-in" /></li>
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img3.png"
+					<img src="./images/img3.jpg" alt="andrew" />
 					<h3>Андрей Шевченко</h3>
 					<p>Marketing</p>
 					<ul>
-						<li><img src="./images/instagram.png"</li>
-						<li><img src="./images/twitter.png"</li>
-						<li><img src="./images/facebook.png"</li>
-						<li><img src="./images/in.png"</li>
+						<li><img src="./images/instagram.svg" alt="logo-instagram" /></li>
+						<li><img src="./images/twitter.svg" alt="logo-twitter" /></li>
+						<li><img src="./images/facebook.svg" alt="logo-facebook" /></li>
+						<li><img src="./images/in.svg" alt="logo-in" /></li>
 					</ul>
 				</li>
 				<li>
-					<img src="./images/img4.png"
+					<img src="./images/img4.jpg" alt="ivan" />
 					<h3>Иван Николаев</h3>
 					<p>UI Designer</p>
 					<ul>
-						<li><img src="./images/instagram.png"</li>
-						<li><img src="./images/twitter.png"</li>
-						<li><img src="./images/facebook.png"</li>
-						<li><img src="./images/in.png"</li>
+						<li><img src="./images/instagram.svg" alt="logo-instagram" /></li>
+						<li><img src="./images/twitter.svg" alt="logo-twitter" /></li>
+						<li><img src="./images/facebook.svg" alt="logo-facebook" /></li>
+						<li><img src="./images/in.svg" alt="logo-in" /></li>
 					</ul>
 				</li>
 			</ul>
@@ -129,28 +129,28 @@
 		<section>
 			<h2>Постоянные клиенты</h2>
 			<ul>
-				<li><img src="./images/Client1.svg"</li>
-				<li><img src="./images/Client2.svg"</li>
-				<li><img src="./images/Client3.svg"</li>
-				<li><img src="./images/Client4.svg"</li>
-				<li><img src="./images/Client5.svg"</li>
-				<li><img src="./images/Client6.svg"</li>
+				<li><img src="./images/Client1.svg" alt="logo-client-1" /></li>
+				<li><img src="./images/Client2.svg" alt="logo-client-2" /></li>
+				<li><img src="./images/Client3.svg" alt="logo-client-3" /></li>
+				<li><img src="./images/Client4.svg" alt="logo-client-4" /></li>
+				<li><img src="./images/Client5.svg" alt="logo-client-5" /></li>
+				<li><img src="./images/Client6.svg" alt="logo-client-6 /" /></li>
 			</ul>
 		</section>
 
 		<footer>
 			<a href="/">
-				<img src="./images/logo.png/logo.png" alt="" />
+				<img src="./images/logo/logo.svg" alt="logo-of-company" />
 			</a>
 			<p>г.Киев, пр-т Леси Украинки, 26</p>
 			<p>info@example.com</p>
 			<p>+38 099 111 11 11</p>
 			<h5>Присоединяйтесь</h5>
 			<ul>
-				<li><img src="./images/instagram.png" alt="" /></li>
-				<li><img src="./images/twitter.png" alt="" /></li>
-				<li><img src="./images/facebook.png" alt="" /></li>
-				<li><img src="./images/in.png" alt="" /></li>
+				<li><img src="./images/instagram.svg" alt="logo-instagram" /></li>
+				<li><img src="./images/twitter.svg" alt="logo-twitter" /></li>
+				<li><img src="./images/facebook.svg" alt="logo-facebook" /></li>
+				<li><img src="./images/in.svg" alt="logo-in" /></li>
 			</ul>
 		</footer>
 	</body>
