--- a/index.html
+++ b/index.html
@@ -1,64 +1,279 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-    <header> 
-        <nav>
+  </head>
+  <body>
+    <header>
+      <nav>
         <a href="/">
-            <img src="./images/logo.png/Web Studio.png" alt="">
+          <img src="./images/logo/web-studio.svg" alt="logo-of-company" />
         </a>
-         
-        <ul>
-            <li><a href="./images/logo.png/Студия.png">Студия</a></li>
-            <li><a href="./images/logo.png/Портфолио.png">Портфолио</a></li>
-            <li><a href="./images/logo.png/Контакты.png">Контакты</a></li>
-        </ul>
-        </nav>
 
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="./images/studio.svg">Студия</a></li>
+          <li><a href="./images/portfolio.svg">Портфолио</a></li>
+          <li><a href="./images/contacts.svg">Контакты</a></li>
         </ul>
+      </nav>
+
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <div>
-        <section>
-            <h1>Эффективные решения<br> для вашего бизнеса</h1>
-            <a href="./images/logo.png/Заказать услугу.png">Заказать услугу</a>
-            <img src="./images/Header img.png" alt="">
-        </section>
+      <section>
+        <h1>
+          Эффективные решения
+          <br />
+          для вашего бизнеса
+        </h1>
+        <button>Заказать услугу</button>
+      </section>
     </div>
 
     <section>
-        <ul>
-            <li>
-                <img src="./images/logo.png/Vector.png" alt="">
-                <h5>ВНИМАНИЕ К ДЕТАЛЯМ</h5>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            <li>
+      <ul>
+        <li>
+          <img src="./images/logo/antenna.svg" alt="antenna" />
+          <h5>внимание к деталям</h5>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
 
-            <li>
-                <img src="./images/logo.png/Vector (1).png" alt="">
-                <h5>ПУНКТУАЛЬНОСТЬ</h5>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li> 
-            
-            <li>
-                <img src="./images/logo.png/Vector (2).png" alt="">
-                <h5>ПЛАНИРОВАНИЕ</h5>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
+        <li>
+          <img src="./images/logo/clock.svg" alt="clock" />
+          <h5>Пунктуальность</h5>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
 
-            <li>
-                <img src="./images/logo.png/Vector (3).png" alt="">
-                <h5>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h5>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
+        <li>
+          <img src="./images/logo/diagram.svg" alt="diagram" />
+          <h5>Планирование</h5>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+
+        <li>
+          <img src="./images/logo/astronaut.svg" alt="cosmo" />
+          <h5>Современные технологии</h5>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
     </section>
-</body>
+
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li><img src="/images/box1.jpg" alt="Десктопные приложения" /></li>
+        <li><img src="./images/box2.jpg" alt="Мобильные приложения" /></li>
+        <li><img src="./images/box3.jpg" alt="Дизайнерские решения" /></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/nik.jpg" alt="nik" />
+          <h3>Николай Кучеренко</h3>
+          <p>Product designer</p>
+          <ul>
+            <li>
+              <a href="">
+                <img
+                  src="./images/logo/logo-instagram.svg"
+                  alt="logo-instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-twitter.svg" alt="logo-twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-facebook.svg" alt="logo-facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-in.svg" alt="logo-in"
+              /></a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <img src="./images/olga.jpg" alt="olga" />
+          <h3>Ольга Иванова</h3>
+          <p>Frontend Developer</p>
+          <ul>
+            <li>
+              <a href="">
+                <img
+                  src="./images/logo/logo-instagram.svg"
+                  alt="logo-instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-twitter.svg" alt="logo-twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-facebook.svg" alt="logo-facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-in.svg" alt="logo-in"
+              /></a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <img src="./images/andrew.jpg" alt="andrew" />
+          <h3>Андрей Шевченко</h3>
+          <p>Marketing</p>
+          <ul>
+            <li>
+              <a href="">
+                <img
+                  src="./images/logo/logo-instagram.svg"
+                  alt="logo-instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-twitter.svg" alt="logo-twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-facebook.svg" alt="logo-facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-in.svg" alt="logo-in"
+              /></a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <img src="./images/ivan.jpg" alt="ivan" />
+          <h3>Иван Николаев</h3>
+          <p>UI Designer</p>
+          <ul>
+            <li>
+              <a href="">
+                <img
+                  src="./images/logo/logo-instagram.svg"
+                  alt="logo-instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-twitter.svg" alt="logo-twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-facebook.svg" alt="logo-facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/logo/logo-in.svg" alt="logo-in"
+              /></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Постоянные клиенты</h2>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-client1.svg" alt="client1"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/logo/logo-client2.svg" alt="client2"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-client3.svg" alt="client3"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-client4.svg" alt="client4"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-client5.svg" alt="client5"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-client6.svg" alt="client6"
+          /></a>
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <a href="/">
+        <img src="./images/logo/web-studio.svg" alt="logo-of-company" />
+      </a>
+      <address>
+        г.Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@example.com">info@example.com</a><br />
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
+      <h5>Присоединяйтесь</h5>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-instagram.svg" alt="logo-instagram"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-twitter.svg" alt="logo-twitter"
+          /></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/logo/logo-facebook.svg" alt="logo-facebook"
+          /></a>
+        </li>
+        <li>
+          <a href=""> <img src="./images/logo/logo-in.svg" alt="logo-in" /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
