--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<section>
 			<h2>Чем мы занимаемся</h2>
 			<ul>
-				<li><img src="/images/box1.jpg" alt="Десктопные приложения" /></li>
+				<li><img src="./images/box1.jpg" alt="Десктопные приложения" /></li>
 				<li><img src="./images/box2.jpg" alt="Мобильные приложения" /></li>
 				<li><img src="./images/box3.jpg" alt="Дизайнерские решения" /></li>
 			</ul>
