--- a/index.html
+++ b/index.html
@@ -234,13 +234,11 @@
 			<a href="/">
 				<img src="./images/logo/web-studio.svg" alt="logo-of-company" />
 			</a>
-			<address>
-				г.Киев, пр-т Леси Украинки, 26
-				<br />
-				<a href="mailto:info@example.com">info@example.com</a>
-				<br />
-				<a href="tel:+380991111111">+38 099 111 11 11</a>
-			</address>
+			<p>г.Киев, пр-т Леси Украинки, 26</p>
+			<br />
+			<a href="mailto:info@example.com">info@example.com</a>
+			<br />
+			<a href="tel:+380991111111">+38 099 111 11 11</a>
 			<h5>Присоединяйтесь</h5>
 			<ul>
 				<li>
