--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/">
-					<img src="./images/logo/web-studio.svg" alt="logo-of-company" />
-				</a>
-
+				<a href="/">web-studio</a>
 				<ul>
 					<li><a href="./images/studio.svg">Студия</a></li>
 					<li><a href="./images/portfolio.svg">Портфолио</a></li>
@@ -41,7 +38,7 @@
 			<ul>
 				<li>
 					<img src="./images/logo/antenna.svg" alt="antenna" />
-					<h5>внимание к деталям</h5>
+					<h3>внимание к деталям</h3>
 					<p>
 						Идейные соображения, а также начало повседневной работы по формированию позиции.
 					</p>
@@ -49,7 +46,7 @@
 
 				<li>
 					<img src="./images/logo/clock.svg" alt="clock" />
-					<h5>Пунктуальность</h5>
+					<h3>Пунктуальность</h3>
 					<p>
 						Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 					</p>
@@ -57,7 +54,7 @@
 
 				<li>
 					<img src="./images/logo/diagram.svg" alt="diagram" />
-					<h5>Планирование</h5>
+					<h3>Планирование</h3>
 					<p>
 						Равным образом консультация с широким активом в значительной степени обуславливает.
 					</p>
@@ -65,7 +62,7 @@
 
 				<li>
 					<img src="./images/logo/astronaut.svg" alt="cosmo" />
-					<h5>Современные технологии</h5>
+					<h3>Современные технологии</h3>
 					<p>
 						Значимость этих проблем настолько очевидна, что реализация плановых заданий.
 					</p>
@@ -74,7 +71,7 @@
 		</section>
 
 		<section>
-			<h2>Чем мы занимаемся</h2>
+			<h3>Чем мы занимаемся</h3>
 			<ul>
 				<li><img src="./images/box1.jpg" alt="Десктопные приложения" /></li>
 				<li><img src="./images/box2.jpg" alt="Мобильные приложения" /></li>
@@ -83,7 +80,7 @@
 		</section>
 
 		<section>
-			<h2>Наша команда</h2>
+			<h3>Наша команда</h3>
 			<ul>
 				<li>
 					<img src="./images/nik.jpg" alt="nik" />
@@ -197,7 +194,7 @@
 		</section>
 
 		<section>
-			<h2>Постоянные клиенты</h2>
+			<h3>Постоянные клиенты</h3>
 			<ul>
 				<li>
 					<a href="">
@@ -238,7 +235,7 @@
 			<a href="mailto:info@example.com">info@example.com</a>
 			<br />
 			<a href="tel:+380991111111">+38 099 111 11 11</a>
-			<h5>Присоединяйтесь</h5>
+			<h3>Присоединяйтесь</h3>
 			<ul>
 				<li>
 					<a href="">
