--- a/index.html
+++ b/index.html
@@ -73,9 +73,18 @@
 		<section>
 			<h3>Чем мы занимаемся</h3>
 			<ul>
-				<li><img src="./images/box1.jpg" alt="Десктопные приложения" /></li>
-				<li><img src="./images/box2.jpg" alt="Мобильные приложения" /></li>
-				<li><img src="./images/box3.jpg" alt="Дизайнерские решения" /></li>
+				<li>
+					<img src="./images/box1.jpg" alt="Десктопные приложения" />
+				</li>
+				<p>Десктопные приложения</p>
+				<li>
+					<img src="./images/box2.jpg" alt="Мобильные приложения" />
+				</li>
+				<p>Мобильные приложения</p>
+				<li>
+					<img src="./images/box3.jpg" alt="Дизайнерские решения" />
+				</li>
+				<p>Дизайнерские решения</p>
 			</ul>
 		</section>
 
@@ -88,24 +97,16 @@
 					<p>Product designer</p>
 					<ul>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-instagram.svg" alt="logo-instagram" />
-							</a>
+							<a href="" aria-label="link-instagram.svg">link-instagram</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-twitter.svg" alt="logo-twitter" />
-							</a>
+							<a href="" aria-label="link-twitter.svg">link-twitter</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-facebook.svg" alt="logo-facebook" />
-							</a>
+							<a href="" aria-label="link-facebook.svg">link-facebook</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-in.svg" alt="logo-in" />
-							</a>
+							<a href="" aria-label="link-linkedin.svg">link-linkedin</a>
 						</li>
 					</ul>
 				</li>
@@ -115,24 +116,16 @@
 					<p>Frontend Developer</p>
 					<ul>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-instagram.svg" alt="logo-instagram" />
-							</a>
+							<a href="" aria-label="link-instagram.svg">link-instagram</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-twitter.svg" alt="logo-twitter" />
-							</a>
+							<a href="" aria-label="link-twitter.svg">link-twitter</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-facebook.svg" alt="logo-facebook" />
-							</a>
+							<a href="" aria-label="link-facebook.svg">link-facebook</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-in.svg" alt="logo-in" />
-							</a>
+							<a href="" aria-label="link-linkedin.svg">link-linkedin</a>
 						</li>
 					</ul>
 				</li>
@@ -142,24 +135,16 @@
 					<p>Marketing</p>
 					<ul>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-instagram.svg" alt="logo-instagram" />
-							</a>
+							<a href="" aria-label="link-instagram.svg">link-instagram</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-twitter.svg" alt="logo-twitter" />
-							</a>
+							<a href="" aria-label="link-twitter.svg">link-twitter</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-facebook.svg" alt="logo-facebook" />
-							</a>
+							<a href="" aria-label="link-facebook.svg">link-facebook</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-in.svg" alt="logo-in" />
-							</a>
+							<a href="" aria-label="link-linkedin.svg">link-linkedin</a>
 						</li>
 					</ul>
 				</li>
@@ -169,24 +154,16 @@
 					<p>UI Designer</p>
 					<ul>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-instagram.svg" alt="logo-instagram" />
-							</a>
+							<a href="" aria-label="link-instagram.svg">link-instagram</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-twitter.svg" alt="logo-twitter" />
-							</a>
+							<a href="" aria-label="link-twitter.svg">link-twitter</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-facebook.svg" alt="logo-facebook" />
-							</a>
+							<a href="" aria-label="link-facebook.svg">link-facebook</a>
 						</li>
 						<li>
-							<a href="">
-								<img src="./images/logo/logo-in.svg" alt="logo-in" />
-							</a>
+							<a href="" aria-label="link-linkedin.svg">link-linkedin</a>
 						</li>
 					</ul>
 				</li>
@@ -228,32 +205,27 @@
 		</section>
 
 		<footer>
-			<a href="/">
-				<img src="./images/logo/web-studio.svg" alt="logo-of-company" />
-			</a>
-			<p>г.Киев, пр-т Леси Украинки, 26</p>
-			<a href="mailto:info@example.com">info@example.com</a>
-			<br />
-			<a href="tel:+380991111111">+38 099 111 11 11</a>
+			<a href="/">web-studio</a>
+			<address>
+				г.Киев, пр-т Леси Украинки, 26
+				<br />
+				<a href="mailto:info@example.com">info@example.com</a>
+				<br />
+				<a href="tel:+380991111111">+38 099 111 11 11</a>
+			</address>
 			<h3>Присоединяйтесь</h3>
 			<ul>
 				<li>
-					<a href="">
-						<img src="./images/logo/logo-instagram.svg" alt="logo-instagram" />
-					</a>
+					<a href="" aria-label="link-instagram.svg">link-instagram</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/logo/logo-twitter.svg" alt="logo-twitter" />
-					</a>
+					<a href="" aria-label="link-twitter.svg">link-twitter</a>
 				</li>
 				<li>
-					<a href="">
-						<img src="./images/logo/logo-facebook.svg" alt="logo-facebook" />
-					</a>
+					<a href="" aria-label="link-facebook.svg">link-facebook</a>
 				</li>
 				<li>
-					<a href=""><img src="./images/logo/logo-in.svg" alt="logo-in" /></a>
+					<a href="" aria-label="link-linkedin.svg">link-linkedin</a>
 				</li>
 			</ul>
 		</footer>
