--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 			<h3>Чем мы занимаемся</h3>
 			<ul>
 				<li>
-					<img src="./images/box1.jpg" alt="Десктопные приложения" />
+					<img src="./images/box1.jpg" alt="Десктопные приложения" width="370px" height="294px" />
 				</li>
 				<p>Десктопные приложения</p>
 				<li>
-					<img src="./images/box2.jpg" alt="Мобильные приложения" />
+					<img src="./images/box2.jpg" alt="Мобильные приложения" width="370px" height="294px" />
 				</li>
 				<p>Мобильные приложения</p>
 				<li>
-					<img src="./images/box3.jpg" alt="Дизайнерские решения" />
+					<img src="./images/box3.jpg" alt="Дизайнерские решения" width="370px" height="294px" />
 				</li>
 				<p>Дизайнерские решения</p>
 			</ul>
