--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/">web-studio</a>
+				<a href="/">WebStudio</a>
 				<ul>
-					<li><a href="./images/studio.svg">Студия</a></li>
-					<li><a href="./images/portfolio.svg">Портфолио</a></li>
-					<li><a href="./images/contacts.svg">Контакты</a></li>
+					<li><a href="/">Студия</a></li>
+					<li><a href="./portfolio.html">Портфолио</a></li>
+					<li><a href="./contacts">Контакты</a></li>
 				</ul>
 			</nav>
 
@@ -23,22 +23,20 @@
 			</ul>
 		</header>
 
-		<div>
-			<section>
-				<h1>
-					Эффективные решения
-					<br />
-					для вашего бизнеса
-				</h1>
-				<button>Заказать услугу</button>
-			</section>
-		</div>
+		<section>
+			<h1>
+				Эффективные решения
+				<br />
+				для вашего бизнеса
+			</h1>
+			<button>Заказать услугу</button>
+		</section>
 
 		<section>
 			<ul>
 				<li>
 					<img src="./images/logo/antenna.svg" alt="antenna" />
-					<h3>внимание к деталям</h3>
+					<h3>Внимание к деталям</h3>
 					<p>
 						Идейные соображения, а также начало повседневной работы по формированию позиции.
 					</p>
@@ -71,28 +69,28 @@
 		</section>
 
 		<section>
-			<h3>Чем мы занимаемся</h3>
+			<h2>Чем мы занимаемся</h2>
 			<ul>
 				<li>
-					<img src="./images/box1.jpg" alt="Десктопные приложения" width="370px" height="294px" />
+					<img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="284" />
+					<h3>Десктопные приложения</h3>
 				</li>
-				<p>Десктопные приложения</p>
 				<li>
-					<img src="./images/box2.jpg" alt="Мобильные приложения" width="370px" height="294px" />
+					<img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294" />
+					<h3>Мобильные приложения</h3>
 				</li>
-				<p>Мобильные приложения</p>
 				<li>
-					<img src="./images/box3.jpg" alt="Дизайнерские решения" width="370px" height="294px" />
+					<img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294" />
+					<h3>Дизайнерские решения</h3>
 				</li>
-				<p>Дизайнерские решения</p>
 			</ul>
 		</section>
 
 		<section>
-			<h3>Наша команда</h3>
+			<h2>Наша команда</h2>
 			<ul>
 				<li>
-					<img src="./images/nik.jpg" alt="nik" />
+					<img src="./images/nik.jpg" alt="nik" width="270" height="260" />
 					<h3>Николай Кучеренко</h3>
 					<p>Product designer</p>
 					<ul>
@@ -111,7 +109,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/olga.jpg" alt="olga" />
+					<img src="./images/olga.jpg" alt="olga" width="270" height="260" />
 					<h3>Ольга Иванова</h3>
 					<p>Frontend Developer</p>
 					<ul>
@@ -130,7 +128,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/andrew.jpg" alt="andrew" />
+					<img src="./images/andrew.jpg" alt="andrew" width="270" height="260" />
 					<h3>Андрей Шевченко</h3>
 					<p>Marketing</p>
 					<ul>
@@ -149,7 +147,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="./images/ivan.jpg" alt="ivan" />
+					<img src="./images/ivan.jpg" alt="ivan" width="270" height="260" />
 					<h3>Иван Николаев</h3>
 					<p>UI Designer</p>
 					<ul>
@@ -171,7 +169,7 @@
 		</section>
 
 		<section>
-			<h3>Постоянные клиенты</h3>
+			<h2>Постоянные клиенты</h2>
 			<ul>
 				<li>
 					<a href="">
@@ -205,15 +203,15 @@
 		</section>
 
 		<footer>
-			<a href="/">web-studio</a>
+			<a href="/">WebStudio</a>
 			<address>
-				г.Киев, пр-т Леси Украинки, 26
-				<br />
-				<a href="mailto:info@example.com">info@example.com</a>
-				<br />
-				<a href="tel:+380991111111">+38 099 111 11 11</a>
+				<ul>
+					<li>г.Киев, пр-т Леси Украинки, 26</li>
+					<li><a href="mailto:info@example.com">info@example.com</a></li>
+					<li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+				</ul>
 			</address>
-			<h3>Присоединяйтесь</h3>
+			<b>Присоединяйтесь</b>
 			<ul>
 				<li>
 					<a href="" aria-label="link-instagram.svg">link-instagram</a>
